@@ -1,3 +1,15 @@
+2005-01-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* cfgrtl.c (try_redirect_by_replacing_jump): Add 2 arguments to
+	tablejump_p.
+
+2003-07-20  Josef Zlomek  <zlomekj@suse.cz>
+
+	* cfgcleanup.c (merge_blocks_move_successor_nojumps): Use tablejump_p.
+	* ifcvt.c (find_if_block): Added 2 arguments to tablejump_p.
+	* jump.c (tablejump_p): Added 2 arguments.
+	* rtl.h (tablejump_p): Likewise.
+
 2004-12-01  Alexandre Oliva  <aoliva@redhat.com>
 
 	* calls.c (initialize_argument_information): Treat NOP_EXPR
